--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         </section>
         
         <!-- Ambiance Sounds Section -->
-        <h2>Ambiance Sounds <input type="range" min="0" max="100" value="50" class="slider" id="ambiance-volume" oninput="AudioManager.setVolume('ambiance', this.value)"></h2>
+        <h2>Ambiance Sounds</h2>
         <section id="ambiance" class="section">
         </section>
 
@@ -49,7 +49,7 @@
      fetch('http://127.0.0.1:3000/list-sounds/ambiance')
         .then(response => response.json())
         .then(soundFiles => {
-            AudioManager.generateButtons(soundFiles, 'ambiance', true);
+            AudioManager.generateAmbientButtons(soundFiles, 'ambiance', true);
         })
         .catch(error => console.error('Error fetching ambiance sound files:', error));
 
@@ -57,7 +57,7 @@
     fetch('http://127.0.0.1:3000/list-sounds/soundboard')
         .then(response => response.json())
         .then(soundFiles => {
-            AudioManager.generateButtons(soundFiles, 'soundboard', false);
+            AudioManager.generateSoundboardButtons(soundFiles, 'soundboard', false);
         })
         .catch(error => console.error('Error fetching soundboard sound files:', error));
     </script>
