General volume for soundboard

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <!-- Background Music Section -->
-        <h2>Background Music <input type="range" min="0" max="100" value="50" class="slider" id="music-volume" oninput="AudioManager.setBackgroundVolume(this.value)"></h2>
+        <h2>Background <input type="range" min="0" max="100" value="50" class="slider" id="music-volume" oninput="AudioManager.setBackgroundVolume(this.value)"></h2>
         <section id="background-music" class="section">
             <button onclick="AudioManager.playBackgroundSound('exploration', this)"  class="button-stop">Play Exploration</button>
             <button onclick="AudioManager.playBackgroundSound('battle', this)"  class="button-stop">Play Battle</button>
@@ -26,7 +26,7 @@
         </section>
 
         <!-- Soundboard Section -->
-        <h2>soundboard</h2>
+        <h2>Soundboard <input type="range" min="0" max="100" value="50" class="slider" id="sounboard-volume" oninput="AudioManager.setBackgroundVolume(this.value)"></h2>
         <section id="soundboard" class="section">
         </section>
     </main>
