--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/MainIcon/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/MainIcon/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/MainIcon/favicon_io/favicon-16x16.png">
+    <link rel="icon" href="assets/images/MainIcon/favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Chat Luthier</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
     <script src="soundBar.js" defer></script>
-    <script src="client.js" defer></script>
+    <script src="audioManager.js" defer></script>
+    <script   type="module">import { LocalDirectory } from './localDirectory.js';</script>
 </head>
 <body>
     <header>
-        <h1>Le Chat Luthier</h1>
+        <div class="header-content">
+            <div class="top-left-controls">
+                <button onclick="LocalDirectory.selectDirectory()" class="button-directory">Set Local Directory</button>
+                <div id="directoryStatus" class="status">Directory not set</div>
+            </div>
+            <div class="center-content">
+                <img src="assets/images/MainIcon/favicon_io/apple-touch-icon.png" alt="Le Chat Luthier Logo" class="logo">
+                <h1>Le Chat Luthier</h1>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -31,10 +46,19 @@
         <h2>Soundboard <input type="range" min="0" max="100" value="50" class="slider" id="soundboard-volume" oninput="AudioManager.setVolume('soundboard', this.value)"></h2>
         <section id="soundboard" class="section">
         </section>
+        <section id="soundboardLocal" class="section">
+        </section>
     </main>
 
 
-    <script>
+    <script  type="module">
+        //Load dir Handle if possible
+        document.addEventListener('DOMContentLoaded', () => {
+            LocalDirectory.getDirectory();
+            AudioManager.loadLocalSoundFiles();
+        });
+
+        //Start cache system
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('service-worker.js')
@@ -42,6 +66,7 @@
                 .catch(err => console.log('Service Worker registration failed:', err));
             });
         }
+
         // Function to generate buttons dynamically based on sound files
         // Fetch sound files for ambiance section and generate buttons
         fetch('http://127.0.0.1:3000/list-sounds/ambiance')
@@ -55,7 +80,7 @@
         fetch('http://127.0.0.1:3000/list-sounds/soundboard')
             .then(response => response.json())
             .then(soundFiles => {
-                AudioManager.generateSoundboardButtons(soundFiles, 'soundboard');
+                AudioManager.generateSoundboardButtons(soundFiles, 'soundboard', false);
             })
             .catch(error => console.error('Error fetching soundboard sound files:', error));
     </script>
