--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,13 @@
     <link rel="manifest" href="manifest.json">
     <script src="soundBar.js" defer></script>
     <script src="audioManager.js" defer></script>
+    <script src="modalWindow.js" defer></script>
     <script   type="module">import { LocalDirectory } from './localDirectory.js';</script>
 </head>
 <body>
     <header>
         <div class="header-content">
-            <div class="top-left-controls">
+            <div class="top-left-controls" id="top-left-controls">
                 <button onclick="LocalDirectory.selectDirectory()" class="button-directory">Set Local Directory</button>
                 <div id="directoryStatus" class="status">Directory not set</div>
             </div>
@@ -31,7 +32,10 @@
 
     <main>
         <!-- Background Music Section -->
-        <h2>Background <input type="range" min="0" max="100" value="50" class="slider" id="music-volume" oninput="AudioManager.setBackgroundVolume(this.value)"></h2>
+        <h2>Background 
+            <button id="add-sound-button" onclick="ModalUploadWindow.openBackgroundUploadModal()">+</button> 
+            <input type="range" min="0" max="100" value="50" class="slider" id="music-volume" oninput="AudioManager.setBackgroundVolume(this.value)">
+        </h2>
         <section id="background-music" class="section">
             <button onclick="AudioManager.playBackgroundSound('background/exploration', this)"  class="button-stop">Play Exploration</button>
             <button onclick="AudioManager.playBackgroundSound('background/battle', this)"  class="button-stop">Play Battle</button>
@@ -41,22 +45,66 @@
         </section>
         
         <!-- Ambiance Sounds Section -->
-        <h2>Ambiance Sounds</h2>
+        <h2>Ambiance Sounds
+            <button id="add-sound-button" onclick="ModalUploadWindow.openAmbianceUploadModal()">+</button> 
+        </h2>
         <section id="ambiance" class="section">
         </section>
         <section id="ambianceLocal" class="section">
         </section>
 
         <!-- Soundboard Section -->
-        <h2>Soundboard <input type="range" min="0" max="100" value="50" class="slider" id="soundboard-volume" oninput="AudioManager.setVolume('soundboard', this.value)"></h2>
+        <h2>Soundboard  
+            <button id="add-sound-button" onclick="ModalUploadWindow.openSoundboardUploadModal()">+</button> 
+            <input type="range" min="0" max="100" value="50" class="slider" id="soundboard-volume" oninput="AudioManager.setVolume('soundboard', this.value)">
+        </h2>
         <section id="soundboard" class="section">
         </section>
         <section id="soundboardLocal" class="section">
         </section>
     </main>
 
+    <!-- Modal HTML Structures -->
+    <div id="background-upload-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" onclick="ModalUploadWindow.closeBackgroundUploadModal()">&times;</span>
+            <h2>Upload Background File</h2>
+            <input type="file" id="background-file-input" accept=".mp3" />
+            <select id="background-type-selector"> <!-- Selector for battle or exploration -->
+                <option value="battle">Battle</option>
+                <option value="exploration">Exploration</option>
+            </select>
+            <select id="background-subtype-selector"></select>
+            <input type="text" id="new-subtype-input" placeholder="New Subtype" />
+            <button onclick="ModalUploadWindow.uploadBackgroundFile()">Upload</button>
+        </div>
+    </div>
+
+    <div id="ambiance-upload-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" onclick="ModalUploadWindow.closeAmbianceUploadModal()">&times;</span>
+            <h2>Upload Ambiance File</h2>
+            <input type="file" id="ambiance-file-input" accept=".mp3" />
+            <button onclick="ModalUploadWindow.uploadAmbianceFile()">Upload</button>
+        </div>
+    </div>
+
+    <div id="soundboard-upload-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" onclick="ModalUploadWindow.closeSoundboardUploadModal()">&times;</span>
+            <h2>Upload Soundboard File</h2>
+            <input type="file" id="soundboard-file-input" accept=".mp3" />
+            <button onclick="ModalUploadWindow.uploadSoundboardFile()">Upload</button>
+        </div>
+    </div>
 
     <script  type="module">
+         if (typeof window.showDirectoryPicker !== 'function')
+         {
+            const controlTop = document.getElementById('top-left-controls');
+            controlTop.style.display = 'none'; // Hide the modal
+         }
+
         //Load dir Handle if possible
         subtypeSelector.addEventListener('change', function() 
         {
