change music when changing context

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,8 @@
         }
         subtypeSelector.addEventListener('change', function() 
         {
+            AudioManager.filesToPlay =  AudioManager.findSoundsByTypeAndContext();
+            AudioManager.activeBackgroundSound.source.stop();
             AudioManager.subType = this.value;
         });
         if ('serviceWorker' in navigator) {
