Added more sounds

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
         </h2>
         <section id="background-music-Credit">---</section>
         <section id="background-music" class="section">
-            <button onclick="AudioManager.playBackgroundSound('ambient', this)"  class="button-stop">Play Ambient</button>
-            <button onclick="AudioManager.playBackgroundSound('moderate', this)"  class="button-stop">Play Moderate</button>
+            <button onclick="AudioManager.playBackgroundSound('calm', this)"  class="button-stop">Play Calm</button>
+            <button onclick="AudioManager.playBackgroundSound('dynamic', this)"  class="button-stop">Play Dynamic</button>
             <button onclick="AudioManager.playBackgroundSound('intense', this)"  class="button-stop">Play Intense</button>
             <select id="subtypeSelector">
                 <option>default</option>
