--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,15 @@
 <body>
     <header>
         <div class="header-content">
-           <!-- <div class="top-left-controls" id="top-left-controls">
+            <div  style="display: none" class="top-left-controls" id="top-left-controls">
                 <button onclick="LocalDirectory.selectDirectory()" class="button-directory">Set Local Directory</button>
                 <div id="directoryStatus" class="status">Directory not set</div>
-            </div> -->
+            </div>
             <div class="center-content">
                 <img src="assets/images/favicons/MainLogo.webp" alt="Le Chat Luthier Logo" class="logo">
                 <h1>Le Chat Luthier</h1>
             </div>
-             <!--<button id="google-login-button">Login with Google</button> -->
+            <button  style="display: none" id="google-login-button">Login with Google</button>
 
         </div>
     </header>
