--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 
             BackgroundMusic.setContext(this.value)
         });
-        if ('serviceWorker' in navigator) {
+        if ('serviceWorker' in navigator && false) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js')
                 .then(registration => {
